RESOLVED FIXED26439
[Qt] QtWebKit fails in loading www.nytimes.com in Windows/Linux
https://bugs.webkit.org/show_bug.cgi?id=26439
Summary [Qt] QtWebKit fails in loading www.nytimes.com in Windows/Linux
String
Reported 2009-06-16 03:04:37 PDT
While loading www.nytimes.com, the top most bar cannot be loaded correctly. Here is the corrupt image: http://lh6.ggpht.com/_7B4pgaO4oRQ/ShlwpU8LuKI/AAAAAAAAALw/WnRC34KnjDY/s912/nytimes.png Here is the correct one: http://lh6.ggpht.com/_7B4pgaO4oRQ/SjdspfyF5II/AAAAAAAAAMM/hLTZ37gGA4g/s912/correct.png I have test Qtlauncher,arora in both Windows/Linux and Konqueror. All fail to load nytimes correctly. The bug only occurs in Qt port. I have test QtWebKit version 4.3.3, version 4.5.1 and the latest nightly webkit. Anyone works on Qt port of webkit can solve this problem? Thanks a lot.
Attachments
Fixes issue associated with rejecting response of HTTP 401 error (1.83 KB, patch)
2009-07-04 11:06 PDT, Sriram
hausmann: review+
String
Comment 1 2009-07-01 21:26:35 PDT
May it be that no loadFinished signal emit for javascript created content?
Sriram
Comment 2 2009-07-04 11:06:58 PDT
Created attachment 32256 [details] Fixes issue associated with rejecting response of HTTP 401 error In Qt 4.5, the QNetworkReply doesnt call finish for a 401. In Qt4.6, QNetworkReply signals for 401 works, but QNetworkReplyHandler was not handling it properly.
String
Comment 3 2009-07-05 04:39:53 PDT
It seems not to be fixed yet. I update this patch into webkit-r44683, but Qtlauncher still hangs on 90%...
Sriram
Comment 4 2009-07-05 07:00:19 PDT
This issue needs fix in Qt layer and in Qt Webkit. Please get the latest Qt4.6 from gitorious.org and the latest Webkit (with this patch) to see the patch work.
String
Comment 5 2009-07-05 08:06:26 PDT
(In reply to comment #4) > This issue needs fix in Qt layer and in Qt Webkit. Please get the latest Qt4.6 > from gitorious.org and the latest Webkit (with this patch) to see the patch > work. Okay,I will try it. Thanks for your work!
Simon Hausmann
Comment 6 2009-07-10 06:28:19 PDT
Comment on attachment 32256 [details] Fixes issue associated with rejecting response of HTTP 401 error r=me. thanks, good catch! Two minor points though: 1) Your patch doesn't apply as-is because the diff has relative paths in it (../..) 2) Please don't put in my name as reviewer before it has been reviewed.
Simon Hausmann
Comment 7 2009-07-10 06:29:17 PDT
Landed in r45707. I've also added ProxyAuthenticationError to the same condition, after a quick discussion with Prasanth.
Note You need to log in before you can comment on or make changes to this bug.