2009-07-04  Sriram Yadavalli  <sriram.yadavalli@nokia.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=26439

        QtWebKit fails in loading www.nytimes.com in Windows/Linux

        QNetworkReplyHandler is ignoring content associated with 401 error.
        This causes the XHR response handling to fail.

        Simon: Added also ProxyAuthenticationRequiredError, to handle the same
        case when going through proxies, as suggested by Prasanth.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::finish):

Canonical link: https://commits.webkit.org/37360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45707 268f45cc-cd09-0410-ab3c-d52691b4dbfc